--- a/css/style.css
+++ b/css/style.css
@@ -116,16 +116,16 @@
 	div.education ul li 			{ color:rgba(58, 69, 83, 1); list-style:none; margin:0; padding:0 0 0.825em 0; display:flex; align-items: center;}
 	.education-table				{cellpadding: 50px;}
 	.education-table td			{height: 60px; vertical-align: middle;}
-	aside.sidebar 					{ background:rgba(246,247,146,0.9); padding:5%; }
+	aside.sidebar 					{ background:rgba(246,247,146,0.9); padding:5%; padding-bottom: 10%; }
 	aside.sidebar ul 				{ padding: 0.5em 0 0 0; }
 	aside.sidebar ul li 			{ color:rgba(58, 69, 83, 0.8); list-style:none; margin:0; padding:0 0 0.825em 0; }
-	footer 							{ background:rgba(246,247,146,0.9); clear:both; color:#000; padding:1em 5%; width:94.7%; float: left;}
+	footer 							{ background:rgba(246,247,146,0.9); clear:both; color:#000; padding:1em 5%; margin-top: 5%; width:94.7%; float: left;}
 	footer a 						{ margin-right:0.5em; }
 
 	div.explanation 				{ color:#fff; padding:5%; }
-	div.my-background 				{ background:rgba(234,46,73,0.9); color:#fff; padding:5%; }
+	div.my-background 				{ background:rgba(234,46,73,0.9); color:#fff; margin-top: 0; padding:5%; }
 	div.my-background ul 				{ padding:0.5em 0 2em 0; }
-	div.my-background ul li 			{ color:rgba(58, 69, 83, 0.8); list-style:none; margin:0; padding:0 0 0.825em 0; }
+	div.my-background ul li 			{ color:rgba(58, 69, 83, 0.8); list-style:none; margin: 0; padding:0 0 0.825em 0; }
 	div.skills 					{ background:rgba(255,255,255,0.9); margin-top:10%; padding:5%; }
 	/*div.requirements 				{ background:rgba(255,255,255,0.9); padding:5%; }*/
 	#skills-header					{padding-bottom: 10%;}
